@@ -1,5 +1,7 @@
 Revision history for Perl extension DBIx::DataModel.
 
+  - new recipe in Cookbook : how to quote table and column names (RT#93529)
+
 v2.42 04.01.2014 : adding support for Plack::App::AutoCRUD
   - case-insensitivity for method $schema->db_table($db_name)
   - Schema::Generator::fromDBI takes new arguments $catalog, $schema, $type
